--- a/templates/index.html
+++ b/templates/index.html
@@ -88,16 +88,16 @@
   ) }}
 
   {{ self::event(
-  class="col-span-2 bg-gradient-to-br from-slate-100 to-slate-300",
-  name="BMT China 🇨🇳",
+  class="col-span-2 bg-gradient-to-br shadow-lg from-red-600 to-red-800 text-white",
+  name="BMT 2024 China",
   date="Nov 30 – Dec 1, 2024",
   href="http://www.seedasdan.asia/en/bmt-en/",
   description="Our partner ASDAN serves students in Mainland China, Taiwan, Hong Kong, Macau, and nearby regions."
   ) }}
 
   {{ self::event(
-  class="col-span-6 bg-gradient-to-br from-slate-100 to-slate-300",
-  name="BMT 2023 Online",
+  class="col-span-6 bg-gradient-to-br from-slate-200 to-slate-300",
+  name="BMT 2024 Online",
   date="To be announced",
   href="javascript:void",
   description="The online version of our flagship high school tournament, for students who can’t make it to Berkeley!"
