--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
   name="Berkeley Math Tournament 2024",
   date="November 2, 2024",
   href="/events/bmt-2024/",
-  description="Our live fall tournament offers teams of high school students the opportunity to share their interest in
+  description="Our on-campus fall tournament offers teams of high school students the opportunity to share their interest in
   mathematics with like-minded individuals and to get a taste of the concepts studied in higher mathematics."
   ) }}
 
@@ -92,7 +92,7 @@
   name="BMT 2024 China",
   date="Nov 30 – Dec 1, 2024",
   href="http://www.seedasdan.asia/en/bmt-en/",
-  description="Our partner ASDAN serves students in Mainland China, Taiwan, Hong Kong, Macau, and nearby regions."
+  description="Our partner ASDAN hosts this in-person tournament in Beijing for students in East Asia."
   ) }}
 
   {{ self::event(
@@ -100,15 +100,15 @@
   name="BMT 2024 Online",
   date="To be announced",
   href="javascript:void",
-  description="The online version of our flagship high school tournament, for students who can’t make it to Berkeley!"
+  description="The online version of our flagship high school tournament, for students who can't make it to Berkeley!"
   ) }}
-    
+
   {{ self::event(
   class="col-span-6 bg-gradient-to-br shadow-lg from-emerald-700 to-emerald-900 text-white",
   name="Berkeley mini Math Tournament 2024",
   date="April 14, 2024",
   href="/events/bmmt-2024/",
-  description="Our annual “mini” in-person tournament for middle school and advanced elementary school students
+  description="Our annual "mini" in-person tournament for middle school and advanced elementary school students
   showcases the beauty and fun of mathematics through exciting formats like the Puzzle Round and Relay Round, preparing
   them for future mathematical endeavors."
   ) }}
