--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
   name="Berkeley mini Math Tournament 2024",
   date="April 14, 2024",
   href="/events/bmmt-2024/",
-  description="Our annual \"mini\" in-person tournament for middle school and advanced elementary school students
+  description="Our annual &quot;mini&quot; in-person tournament for middle school and advanced elementary school students
   showcases the beauty and fun of mathematics through exciting formats like the Puzzle Round and Relay Round, preparing
   them for future mathematical endeavors."
   ) }}
