--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,9 @@
   | default(value=page.description
   | default(value=page.summary
   | default(value=""))))
-  | striptags %}
+  | striptags
+  | split(pat="\n")
+  | join(sep=" ") %}
 
   {% if description %}
   <meta name="description" content="{{ description }}" />
@@ -73,15 +75,14 @@
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
-        {{ macros::nav_link(path="@/events/bmt-2023-online.md", label="BMT 2023 Online") }}
-        {{ macros::nav_link(path="@/events/bmmt-2024.md", label="BmMT 2024") }}
+        {{ macros::nav_link(path="@/events/bmt-2024.md", label="BMT 2024") }}
       </nav>
     </header>
     {% endblock %}
 
     <hr>
 
-    <div class="flex-1 flex flex-col gap-4 md:gap-8">
+    <div id="content-wrapper" class="flex-1 flex flex-col gap-4 md:gap-8 relative">
       {% block content %}{% endblock %}
     </div>
 
