--- a/templates/index.html
+++ b/templates/index.html
@@ -79,38 +79,38 @@
 
 <div class="flex flex-col md:grid grid-cols-6 gap-4 max-w-4xl">
   {{ self::event(
-  class="col-span-6 bg-gradient-to-br shadow-lg from-emerald-700 to-emerald-900 text-white",
-  name="Berkeley mini Math Tournament 2024",
-  date="April 14, 2024",
-  href="/events/bmmt-2024/",
-  description="Our annual “mini” in-person tournament for middle school and advanced elementary school students
-  showcases the beauty and fun of mathematics through exciting formats like the Puzzle Round and Relay Round, preparing
-  them for future mathematical endeavors."
-  ) }}
-
-  {{ self::event(
-  class="col-span-4 bg-gradient-to-br shadow-lg from-orange-700 to-orange-900 text-white",
-  name="Berkeley Math Tournament 2023",
-  date="November 4, 2023",
-  href="/events/bmt-2023/",
-  description="Our live fall tournament offers teams of high school students the opportunity to share their interest in
+  class="col-span-4 bg-gradient-to-br shadow-lg from-fuchsia-700 to-fuchsia-900 text-white",
+  name="Berkeley Math Tournament 2024",
+  date="November 2, 2024",
+  href="/events/bmt-2024/",
+  description="Our on-campus fall tournament offers teams of high school students the opportunity to share their interest in
   mathematics with like-minded individuals and to get a taste of the concepts studied in higher mathematics."
   ) }}
 
   {{ self::event(
-  class="col-span-2 bg-gradient-to-br from-slate-100 to-slate-300",
-  name="BMT China 🇨🇳",
-  date="December 2–3, 2023",
+  class="col-span-2 bg-gradient-to-br shadow-lg from-red-600 to-red-800 text-white",
+  name="BMT 2024 China",
+  date="Nov 30 – Dec 1, 2024",
   href="http://www.seedasdan.asia/en/bmt-en/",
-  description="Our partner ASDAN serves students in Mainland China, Taiwan, Hong Kong, Macau, and nearby regions."
+  description="Our partner ASDAN hosts this in-person tournament in Beijing for students in East Asia."
   ) }}
 
   {{ self::event(
-  class="col-span-6 bg-gradient-to-br from-slate-100 to-slate-300",
-  name="BMT 2023 Online",
-  date="January 13–14 and January 20, 2024",
-  href="/events/bmt-2023-online/",
-  description="The online version of our flagship high school tournament, for students who can’t make it to Berkeley!"
+  class="col-span-6 bg-gradient-to-br from-slate-200 to-slate-300",
+  name="BMT 2024 Online",
+  date="To be announced",
+  href="javascript:void",
+  description="The online version of our flagship high school tournament, for students who can't make it to Berkeley!"
+  ) }}
+
+  {{ self::event(
+  class="col-span-6 bg-gradient-to-br shadow-lg from-emerald-700 to-emerald-900 text-white",
+  name="Berkeley mini Math Tournament 2024",
+  date="April 14, 2024",
+  href="/events/bmmt-2024/",
+  description="Our annual &quot;mini&quot; in-person tournament for middle school and advanced elementary school students
+  showcases the beauty and fun of mathematics through exciting formats like the Puzzle Round and Relay Round, preparing
+  them for future mathematical endeavors."
   ) }}
 </div>
 
