fix mobile navbar

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -4,7 +4,7 @@
 
 {# Desktop version #}
 <p class="hidden md:block first:hidden text-gray-400">⁄</p>
-<div class="relative">
+<div class="hidden md:block relative">
   <span class="invisible font-semibold">{{ label }}</span>
   <a href="{{ href }}"
     class="absolute inset-0 text-center text-gray-600 {% if active %} !text-black font-semibold {% endif %}">
