fix: quotes on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <p class="text-base opacity-90">
-      {{ description }}
+      {{ description | safe }}
     </p>
   </a>
 </div>
