feat: team page

--- a/templates/page.html
+++ b/templates/page.html
@@ -31,6 +31,8 @@
   {{ page.content | safe }}
 </main>
 
+{% block after_page_content %}{% endblock %}
+
 {% if page.toc %}
 <div class="hidden xl:block absolute -right-8 translate-x-full h-full max-w-48">
   <nav id="toc" class="sticky top-8">
