--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
         {{ macros::nav_link(path="@/_index.md", label="Home") }}
         {{ macros::nav_link(path="@/news/_index.md", label="News") }}
         {{ macros::nav_link(path="@/blog/_index.md", label="Blog") }}
-        <!-- {{ macros::nav_link(path="@/about.md", label="About") }} -->
+        {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
         {{ macros::nav_link(path="@/events/bmt-2025.md", label="BMT 2025") }}
