--- a/templates/index.html
+++ b/templates/index.html
@@ -98,8 +98,8 @@
   {{ self::event(
   class="col-span-6 bg-gradient-to-br from-slate-200 to-slate-300",
   name="BMT 2024 Online",
-  date="To be announced",
-  href="javascript:void",
+  date="December 7, 2024",
+  href="https://berkeley.mt/events/bmt-2024-online/",
   description="The online version of our flagship high school tournament, for students who can't make it to Berkeley!"
   ) }}
 
