add bmt online to navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,7 @@
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
         {{ macros::nav_link(path="@/events/bmt-2024.md", label="BMT 2024") }}
+        {{ macros::nav_link(path="@/events/bmt-2024-online.md", label="BMT 2024 Online") }}
       </nav>
     </header>
     {% endblock %}
