feat: update assertion on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,8 +66,8 @@
 <div>
   <p class="text-lg md:text-xl leading-relaxed">
     A UC Berkeley student-led organization that aims to spread mathematics and the spirit of mathematical competition
-    globally by presenting students with interesting, original, hand-crafted problems. As of 2024, we are one of the
-    largest student-run math competitions on the West Coast with over 2,000 contestants.
+    globally by presenting students with interesting, original, hand-crafted problems. With over 4,000 annual student
+    participants from all across the globe, BMT is the largest student-run math competition in the world.
   </p>
 </div>
 
