--- a/templates/index.html
+++ b/templates/index.html
@@ -81,38 +81,38 @@
 
 <div class="flex flex-col md:grid grid-cols-6 gap-4 max-w-4xl">
   {{ self::event(
-  class="col-span-4 bg-gradient-to-br shadow-lg from-fuchsia-700 to-fuchsia-900 text-white",
+  class="col-span-4 bg-gradient-to-br shadow-lg from-indigo-700 to-indigo-900 text-white",
+  name="Berkeley mini Math Tournament 2025",
+  date="April 12, 2025",
+  href="/events/bmmt-2025/",
+  description="Our annual &quot;mini&quot; in-person tournament for middle school and advanced elementary school students
+  showcases the beauty and fun of mathematics through exciting formats like the Puzzle Round and Relay Round, preparing
+  them for future mathematical endeavors."
+  ) }}
+
+  {{ self::event(
+  class="col-span-2 bg-gradient-to-br shadow-lg from-orange-700 to-orange-900 text-white",
+  name="BmMT 2025 Online",
+  date="June 7, 2025",
+  href="/events/bmmt-2025-online/",
+  description="The online, synchronous version of our middle school tournament!"
+  ) }}
+
+  {{ self::event(
+  class="col-span-6 bg-gradient-to-br from-slate-200 to-slate-300",
+  name="BMT 2024 China",
+  date="May 24–25, 2025",
+  href="https://www.seedasdan.asia/en/bmmt-en/",
+  description="Our partner ASDAN hosts this in-person tournament in Beijing, China for students in East Asia."
+  ) }}
+
+  {{ self::event(
+  class="col-span-6 bg-gradient-to-br shadow-lg from-fuchsia-700 to-fuchsia-900 text-white",
   name="Berkeley Math Tournament 2024",
   date="November 2, 2024",
   href="/events/bmt-2024/",
   description="Our on-campus fall tournament offers teams of high school students the opportunity to share their interest in
   mathematics with like-minded individuals and to get a taste of the concepts studied in higher mathematics."
-  ) }}
-
-  {{ self::event(
-  class="col-span-2 bg-gradient-to-br shadow-lg from-red-600 to-red-800 text-white",
-  name="BMT 2024 China",
-  date="Nov 30 – Dec 1, 2024",
-  href="http://www.seedasdan.asia/en/bmt-en/",
-  description="Our partner ASDAN hosts this in-person tournament in Beijing for students in East Asia."
-  ) }}
-
-  {{ self::event(
-  class="col-span-6 bg-gradient-to-br from-slate-200 to-slate-300",
-  name="BMT 2024 Online",
-  date="December 7, 2024",
-  href="https://berkeley.mt/events/bmt-2024-online/",
-  description="The online version of our flagship high school tournament, for students who can't make it to Berkeley!"
-  ) }}
-
-  {{ self::event(
-  class="col-span-6 bg-gradient-to-br shadow-lg from-emerald-700 to-emerald-900 text-white",
-  name="Berkeley mini Math Tournament 2024",
-  date="April 14, 2024",
-  href="/events/bmmt-2024/",
-  description="Our annual &quot;mini&quot; in-person tournament for middle school and advanced elementary school students
-  showcases the beauty and fun of mathematics through exciting formats like the Puzzle Round and Relay Round, preparing
-  them for future mathematical endeavors."
   ) }}
 </div>
 
