--- a/templates/base.html
+++ b/templates/base.html
@@ -75,8 +75,8 @@
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
-        {{ macros::nav_link(path="@/events/bmt-2024.md", label="BMT 2024") }}
-        {{ macros::nav_link(path="@/events/bmt-2024-online.md", label="BMT 2024 Online") }}
+        {{ macros::nav_link(path="@/events/bmmt-2025.md", label="BmMT 2025") }}
+        {{ macros::nav_link(path="@/events/bmmt-2025-online.md", label="BmMT 2025 Online") }}
       </nav>
     </header>
     {% endblock %}
