fix: misc fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
 
   {{ self::event(
   class="col-span-6 bg-gradient-to-br from-slate-200 to-slate-300",
-  name="BMT 2024 China",
+  name="BmMT 2025 China",
   date="May 24–25, 2025",
   href="https://www.seedasdan.asia/en/bmmt-en/",
   description="Our partner ASDAN hosts this in-person tournament in Beijing, China for students in East Asia."
