--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,8 @@
         class="[&.open>a.nav-hidden]:block [&>a.nav-hidden]:hidden flex flex-col md:flex-row md:mx-auto gap-4 items-stretch">
         {{ macros::nav_link(path="@/_index.md", label="Home") }}
         {{ macros::nav_link(path="@/news/_index.md", label="News") }}
-        {{ macros::nav_link(path="@/about.md", label="About") }}
+        {{ macros::nav_link(path="@/blog/_index.md", label="Blog") }}
+        <!-- {{ macros::nav_link(path="@/about.md", label="About") }} -->
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
         {{ macros::nav_link(path="@/events/bmmt-2025.md", label="BmMT 2025") }}
