--- a/templates/section.html
+++ b/templates/section.html
@@ -46,7 +46,7 @@
     {% endif %}
   </p>
 
-  <a href="{{ page.permalink | safe }}" class="transition-all rounded origin-left hover:bg-gray-200 hover:-m-1 hover:p-1 ">
+  <a href="{{ page.permalink | safe }}" class="transition-all rounded origin-left hover:bg-gray-200 -m-1 p-1 hover:scale-[101%]">
     <div class="flex flex-col gap-2">
       <p class="text-xl">
         {{ macros::newline_break(str=page.title) }}
