--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
   <div class="max-w-4xl min-h-screen p-4 md:p-8 mx-auto flex flex-col gap-4 md:gap-8">
     {% block header %}
     <header class="flex flex-col gap-4 text-center">
-      <a class="mx-auto" href="/"><img src="/assets/logo.png" alt="BMT Logo" width="80"></a>
+      <a class="mx-auto" href="/"><img src="/assets/logo.svg" alt="BMT Logo" width="80"></a>
       <p class="text-2xl font-bold">Berkeley Math Tournament</p>
 
       <nav id="navbar"
@@ -93,7 +93,7 @@
     {% block footer %}
     <div class="flex flex-col items-center justify-between md:items-start text-center md:flex-row gap-4 mb-12">
       <div class="flex flex-col gap-6 items-center md:items-start">
-        <img class="-ml-1 grayscale brightness-0" src="/assets/logo.png" alt="BMT Logo" width="50">
+        <img class="-ml-1 grayscale brightness-0" src="/assets/logo.svg" alt="BMT Logo" width="50">
 
         <div class="flex gap-4 text-xl">
           <a href="https://www.instagram.com/berkeley_mt/"><i class="bi bi-instagram"></i></a>
