feat: bmt 2025 online

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,8 +76,8 @@
         <!-- {{ macros::nav_link(path="@/about.md", label="About") }} -->
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
-        {{ macros::nav_link(path="@/events/bmmt-2025-online.md", label="BmMT 2025 Online") }}
         {{ macros::nav_link(path="@/events/bmt-2025.md", label="BMT 2025") }}
+        {{ macros::nav_link(path="@/events/bmt-2025-online.md", label="BMT 2025 Online") }}
       </nav>
     </header>
     {% endblock %}
