fix: home page card link

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
   class="col-span-6 bg-gradient-to-br shadow-lg from-fuchsia-700 to-fuchsia-900 text-white",
   name="Berkeley Math Tournament 2025",
   date="November 8, 2025",
-  href="#",
+  href="/events/bmt-2025/",
   description="Our on-campus fall tournament offers teams of high school students the opportunity to share their interest in
   mathematics with like-minded individuals and to get a taste of the concepts studied in higher mathematics."
   ) }}
