Revert "Merge branch 'main' of github.com:berkeleymt/berkeley.mt"
This reverts commit 8de9a0f6c376f9f8a996f9809ace70b00e9d72fa, reversing
changes made to 6aaa85bb6e2caebeb65881338b6ea207a6f74aef.

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
         {{ macros::nav_link(path="@/blog/_index.md", label="Blog") }}
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/resources/index.md", label="Resources") }}
-        {{ macros::nav_link(path="@/events/bmmt-2026.md", label="BmMT 2026") }}
+        {{ macros::nav_link(path="@/events/bmt-2025.md", label="BMT 2025") }}
         {{ macros::nav_link(path="@/events/bmt-2025-online.md", label="BMT 2025 Online") }}
       </nav>
     </header>
