--- a/templates/index.html
+++ b/templates/index.html
@@ -117,10 +117,11 @@
 <div class="flex flex-col md:grid grid-cols-6 gap-4 max-w-4xl">
   {{ self::event(
   class="col-span-6 bg-gradient-to-br shadow-lg from-fuchsia-700 to-fuchsia-900 text-white",
-  name="Berkeley mini Math Tournament 2026",
-  date="April 12, 2026",
-  href="/events/bmmt-2026/",
-  description="Our annual “mini” in-person tournament for middle school and advanced elementary school students showcases the beauty and fun of mathematics through exciting formats like the Puzzle Round and Relay Round, preparing them for future mathematical endeavors."
+  name="Berkeley Math Tournament 2025",
+  date="November 8, 2025",
+  href="/events/bmt-2025/",
+  description="Our on-campus fall tournament offers teams of high school students the opportunity to share their interest in
+  mathematics with like-minded individuals and to get a taste of the concepts studied in higher mathematics."
   ) }}
 
   {{ self::event(
