feat: add html redirect

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,8 @@
       document.getElementById("navbar").classList.toggle("open");
     }
   </script>
+
+  {% block extra_head %}{% endblock %}
 </head>
 
 <body>
