--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -15,5 +15,5 @@
 {% endblock extra_head %}
 
 {% block content %}
-  <p>If you are not redirected automatically, follow <a href="{{ page.extra.url | safe }}" data-redirect="true" data-permanent="{% if page.extra.permanent %}true{% else %}false{% endif %}">this link</a> to be redirected</p>
+  <p>If you are not redirected automatically, follow <a href="{{ page.extra.url | safe }}">this link</a> to be redirected.</p>
 {% endblock content %}
