bmmt 2026 online page

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,9 +125,9 @@
 
   {{ self::event(
   class="col-span-4 bg-gradient-to-br shadow-lg from-orange-700 to-orange-900 text-white",
-  name="BMT 2025 Online",
-  date="December 6, 2025",
-  href="/events/bmt-2025-online/",
+  name="BmMT 2026 Online",
+  date="June 6, 2026",
+  href="/events/bmmt-2026-online/",
   description="The online, synchronous version of our flagship high school tournament for students unable to travel to California!"
   ) }}
 
