--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/resources/index.md", label="Resources") }}
         {{ macros::nav_link(path="@/events/bmmt-2026.md", label="BmMT 2026") }}
-        {{ macros::nav_link(path="@/events/bmmt-2026-online.md", label="BmMT 2026 Online") }}
+        {{ macros::nav_link(path="@/events/bmt-2025-online.md", label="BMT 2025 Online") }}
       </nav>
     </header>
     {% endblock %}
