fixed nav bar title

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
       {{ macros::mobile_nav_link(path="@/about.md", label="About") }}
       {{ macros::mobile_nav_link(path="@/resources/index.md", label="Resources") }}
       {{ macros::mobile_nav_link(path="@/events/bmmt-2026.md", label="BmMT 2026") }}
-      {{ macros::mobile_nav_link(path="@/events/bmmt-2026-online.md", label="BMT 2026 Online") }}
+      {{ macros::mobile_nav_link(path="@/events/bmmt-2026-online.md", label="BmMT 2026 Online") }}
     </nav>
   </div>
 
@@ -107,7 +107,7 @@
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/resources/index.md", label="Resources") }}
         {{ macros::nav_link(path="@/events/bmmt-2026.md", label="BmMT 2026") }}
-        {{ macros::nav_link(path="@/events/bmmt-2026-online.md", label="BMT 2026 Online") }}
+        {{ macros::nav_link(path="@/events/bmmt-2026-online.md", label="BmMT 2026 Online") }}
       </nav>
     </header>
     {% endblock %}
