Fix:typo in bmmt2026

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
   name="BmMT 2026 Online",
   date="June 6, 2026",
   href="/events/bmmt-2026-online/",
-  description="The online, synchronous version of our flagship high school tournament for students unable to travel to California!"
+  description="The online, synchronous version of our "mini" math tournament for students unable to travel to California!"
   ) }}
 
   {{ self::event(
